results/SpecGenBench/4-shot/log-Smallest-2023_11_05_21_27_36.txt
public class Smallest {

    //@ requires a.length >= 0;
    //@ ensures a.length == 0 ==> \result == -1;
    //@ ensures 0 <= \result && \result < a.length ==> a[\result] <= a[i] && (\forall int i; 0 <= i && i < a.length; a[\result] <= a[i]);
    //@ ensures \result == -1 ==> (\forall int i; 0 <= i && i < a.length; a[0] <= a[i]);
    static public int Smallest(int[] a) {
        if (a.length == 0) return -1;

        int index = 0;
        int smallest = 0;

        //@ maintaining 0 <= index && index <= a.length;
        //@ maintaining 0 <= smallest && smallest < index;
        //@ maintaining (\forall int i; 0 <= i && i < index; a[smallest] <= a[i]);
        //@ decreases a.length - index;
        while (a.length - index > 0) {
            if (a[index] < a[smallest]) {
                smallest = index;
            }
            index = index + 1;
        }
        return smallest;
    }
}
/home/max/Documents/JMLGPT/tmp/Smallest.java:5: error: cannot find symbol
    //@ ensures 0 <= \result && \result < a.length ==> a[\result] <= a[i] && (\forall int i; 0 <= i && i < a.length; a[\result] <= a[i]);
                                                                       ^
  symbol:   variable i
  location: class Smallest
1 error

